--- a/frontend/src/Pages/loginpg.css
+++ b/frontend/src/Pages/loginpg.css
@@ -3,56 +3,101 @@
   height: 100vh;
   display: flex;
   justify-content: center;
+  align-items: center;
   background-color: rgb(30 58 138);
 }
 
 .login-containe {
   background-color: white;
+  display: grid;
+  grid-template-columns: 60% 40%;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
   border: 2px solid rgba(255, 255, 255, 0.5);
   border-radius: 40px;
   width: 70%;
-  margin: 5% 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: 86%;
 }
 
 .login {
   border-top-left-radius: 40px;
   border-bottom-left-radius: 40px;
-  width: 50%;
+  width: 100%;
   height: 100%;
   padding: 5% 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
 }
 
 .logo {
-  margin: 0 45%;
+  margin: 0 40%;
+  width: 20%;
 }
 
 .login-input {
   border: 1px solid rgb(118, 118, 118);
   box-shadow: 2px 2px 2px rgba(174, 174, 174, 0.558);
   margin: 3% 15% 0% 15%;
+  padding-left: 7%;
   width: 70%;
-  height: 40px;
+  height: 5.5vh;
   border-radius: 50px;
   display: flex;
+  position: relative;
 }
 
 .login-input ::placeholder {
   color: rgb(114, 114, 114);
+  font-size: 1.2vw;
+}
+
+.input-icon {
+  position: absolute;
+  top: 25%;
+  left: 3%;
+  font-size: 100%;
 }
 
 .login-button {
-  background-color: rgb(30 58 138);
+  background-color: rgb(27, 55, 131);
   box-shadow: 2px 2px rgb(162, 162, 162);
   width: 60%;
-  height: 40px;
+  height: auto;
+  padding: 1%;
   margin: 1% 20%;
   color: white;
   font-weight: bold;
   font-size: 1.5vw;
+}
+
+.login-button:hover {
+  background-color: rgb(49, 76, 149);
+  box-shadow: 2px 2px rgb(172, 172, 172);
+}
+
+.login-button:active {
+  background-color: rgb(30, 51, 111);
+  box-shadow: 2px 2px rgb(123, 123, 123);
+}
+
+.or-separator {
+  margin: 20px 0;
+  position: relative;
+}
+
+.line {
+  border-top: 1px solid #cccccc;
+  width: 40%;
+  display: inline-block;
+  margin: 0% 5%;
+}
+
+.or-text {
+  color: #b5b5b5;
+  position: absolute;
+  top: 10%;
+  left: 49%;
+  font-size: large;
 }
 
 .signin-google {
@@ -61,78 +106,192 @@
   align-items: center;
   justify-content: center;
   width: 60%;
-  height: 40px;
+  height: auto;
+  padding: 1%;
   margin: 3% 20%;
   font-weight: bold;
   font-size: 1.3vw;
   box-shadow: 2px 2px;
 }
 
+.signin-google:hover {
+  background-color: rgb(246, 245, 245);
+  box-shadow: 2px 2px rgb(40, 40, 40);
+}
+
+.signin-google:active {
+  background-color: rgb(234, 234, 234);
+}
+
 .login-img {
   background-color: #eef2ff;
   border-top-right-radius: 40px;
   border-bottom-right-radius: 40px;
-  width: 50%;
+  width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-@media (max-width: 2000px) {
-  .login {
-    width: 60%;
-  }
-
-  .login-img {
-    width: 40%;
-  }
-
-  .signin-google {
-    font-size: 1.6vw;
-  }
-}
-
 @media (max-width: 1000px) {
   .login-containe {
-    margin: 3% 0;
+    width: 85%;
   }
 
-  .login {
-    width: 100%;
+  .welcm-text {
+    font-size: 5.5vw;
   }
 
-  .login-img {
-    display: none;
+  .p1 {
+    font-size: 2.5vw;
+    margin: 0% 10%;
+  }
+
+  .login-input {
+    margin: 3% 10% 0% 10%;
+    width: 80%;
+  }
+
+  .login-input input {
+    margin-left: 2%;
+  }
+
+  .login-input ::placeholder {
+    font-size: 1.5vw;
+  }
+
+  .forget-pw,
+  .no-acc {
+    margin-left: 13%;
+    font-size: 1.3vw;
   }
 
   .login-button {
-    font-size: 1.8vw;
-  }
-}
-
-@media (max-width: 900px) {
-  .login-containe {
-    margin: 5% 0;
+    width: 70%;
+    margin: 1% 15%;
+    font-size: 2vw;
   }
 
   .signin-google {
+    width: 70%;
+    margin: 3% 15%;
     font-size: 2vw;
   }
 }
 
-@media (max-width: 750px) {
-  .login-button {
+@media (max-width: 780px) {
+  .login-img {
+    display: none;
+  }
+  .login-containe {
+    grid-template-columns: 100% 0%;
+    width: 70%;
+  }
+
+  .logo {
+    width: 27%;
+  }
+
+  .welcm-text {
+    font-size: 7.5vw;
+  }
+
+  .p1 {
     font-size: 3vw;
+  }
+
+  .login-input input {
+    margin-left: 0;
+  }
+
+  .login-input ::placeholder {
+    font-size: 2vw;
+  }
+
+  .forget-pw,
+  .no-acc {
+    font-size: 2vw;
+  }
+
+  .login-button {
+    font-size: 2.7vw;
   }
 
   .signin-google {
-    font-size: 3vw;
+    font-size: 2.7vw;
   }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 600px) {
   .login-containe {
-    width: 85%;
+    width: 80%;
+  }
+
+  .logo {
+    margin: 0 35%;
+    width: 30%;
+  }
+
+  .welcm-text {
+    font-size: 8vw;
+    line-height: 15px;
+  }
+
+  .p1 {
+    font-size: 4vw;
+    padding-top: 5%;
+  }
+
+  .login-input ::placeholder {
+    font-size: 2.8vw;
+  }
+
+  .forget-pw,
+  .no-acc {
+    font-size: 3vw;
+  }
+
+  .login-button {
+    font-size: 4vw;
+  }
+
+  .signin-google {
+    font-size: 4vw;
+  }
+}
+
+@media (max-width: 455px) {
+  .login-containe {
+    width: 94%;
+    height: 94%;
+    margin: 3%;
+    border-radius: 0;
+  }
+
+  .welcm-text {
+    font-size: 11vw;
+  }
+
+  .p1 {
+    font-size: 6vw;
+  }
+
+  .login-input ::placeholder {
+    font-size: 4vw;
+    padding-left: 2%;
+  }
+
+  .forget-pw,
+  .no-acc {
+    font-size: 4vw;
+  }
+
+  .login-button {
+    font-size: 6vw;
+  }
+
+  .signin-google {
+    font-size: 5.5vw;
   }
 }
