--- a/frontend/src/Components/navigationBar.css
+++ b/frontend/src/Components/navigationBar.css
@@ -4,10 +4,10 @@
   background-color: White;
   display: flex;
   align-items: center;
-  box-shadow: 1px 1px 10px #d7d7d7ce;
+  box-shadow: 1px 1px 10px -10px #d7d7d7ce;
   position: fixed;
   width: 100%;
-  z-index: 20;
+  z-index: 23;
 }
 
 .navigationBar-select {
