--- a/frontend/src/Pages/dashboard.css
+++ b/frontend/src/Pages/dashboard.css
@@ -46,3 +46,22 @@
 .image-caption p {
   font-size: 2vw;
 }
+
+.book-sell-heading {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3vw;
+  font-weight: bold;
+  font-style: italic;
+  font-family: "cursive";
+  padding: 1% 0;
+  margin-top: 1%;
+  color: rgb(23 37 84);
+}
+
+.book-sell-heading h1 {
+  border: 3px solid rgb(23 37 84);
+  padding: 0 1%;
+}
